# ZJU2025SummerCpp_surf

./: .gitignore  CMakeLists.txt  CMakePresets_example.json  README.md  vcpkg-configuration.json  vcpkg.json
code/: CMakeLists.txt
code/src/: CMakeLists.txt  assetManager.cpp  entityManager.cpp  eventBus.cpp  game.cpp  inputManager.cpp  mvvmGame.cpp  obstacle.cpp  player.cpp  renderSystem.cpp  surf.cpp  utils.cpp
code/src/app/: game.cpp  game.h  mvvmGame.cpp
code/src/common/: animationController.cpp  assetManager.cpp  config.h  eventBus.cpp  notificationCenter.h  observable.h  scoreManager.cpp  scoreManager.h  spriteManager.cpp  surfMap.h  textureManager.cpp  textureManager.h  utils.cpp  utils.h
code/src/include/: assetManager.h  config.h  entity.h  entityManager.h  event.h  game.h  inputManager.h  mvvmGame.h  obstacle.h  player.h  renderSystem.h  utils.h
code/src/include/app/: mvvmGame.h
code/src/include/common/: animationController.h  assetManager.h  config.h  eventBus.h  spriteManager.h
code/src/include/infrastructure/: animationController.h  config.h  event.h  eventBus.h
code/src/include/models/: entityModel.h  gameModel.h  playerModel.h
code/src/include/services/: playerService.h
code/src/include/viewModels/: gameViewModel.h  inputManager.h  playerViewModel.h
code/src/include/views/: IGameView.h  entityManager.h  gameView.h  renderSystem.h  spriteManager.h
code/src/infrastructure/: animationController.cpp  assetManager.cpp  eventBus.cpp  utils.cpp
code/src/models/: entityModel.cpp  entityModel.h  gameModel.cpp  gameModel.h  itemModel.h  obstacleModel.h  playerModel.cpp  playerModel.h
code/src/services/: playerService.cpp
code/src/viewModels/: animationViewModel.cpp  animationViewModel.h  fontViewModel.cpp  fontViewModel.h  gameViewModel.cpp  gameViewModel.h  inputManager.cpp  obstacleItemViewModel.cpp  obstacleItemViewModel.h  obstacleItemViewModel_1.cpp  obstacleViewModel.cpp  obstacleViewModel.h  playerViewModel.cpp  playerViewModel.h  spriteViewModel.cpp  spriteViewModel.h  textureViewModel.cpp  textureViewModel.h
code/src/viewModels/commands/: animationCommands.cpp  gameCommands.cpp  obstacleCommands.cpp  playerCommands.cpp  spriteCommands.cpp
code/src/views/: entityManager.cpp  gameView.cpp  gameView.h  renderSystem.cpp  spriteManager.cpp  utils.h
code/test/: CMakeLists.txt  sfml_example.cpp
src/code/: CMakeLists.txt  sfml_example.cpp
